--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!-- INSTRUCTIONS BOX -->
 <div class="row" id="instructions">
     <div class="col-md-12">
-        <p>You will be given a random number at the start of the game.</p>
+        <p>You will be given a random number at the start of the game</p>
         <p>There are four crystals below. By clicking on a crystal, you will add a specific numerical amount of points to your total score</p>
         <p>You win the game by matching your total score to the random number given. You lose the game if your total score goes above the random number</p>
         <p>The value of each crystal is hidden until you click on it</p>
@@ -39,10 +39,10 @@
 <!-- Crystal Pictures and Score Adder -->
 <div class="row" id="imageline" id="imageClick">
     <div class="col-md-6" id="image">
-        <img id="red "src="assets/images/red.png" alt="red crystal">
-        <img src="assets/images/blue.png" alt="blue crystal" id="blue">
-        <img src="assets/images/yellow.png" alt="yellow crystal" id="yellow">
-        <img src="assets/images/green.png" alt="green crystal" id="green">
+        <img id="red" src="assets/images/red.png" alt="red crystal">
+        <img id="blue" src="assets/images/blue.png" alt="blue crystal">
+        <img id="yellow" src="assets/images/yellow.png" alt="yellow crystal">
+        <img id="green" src="assets/images/green.png" alt="green crystal">
 
     </div>
 
